# Sport-Data-Scraper

./: README.md  pyproject.toml  scrap_tool.py
sport_data_scraper/: open_list_of_urls.py  requirement_doc.odt  scraper.py  sport_data_scraper.py
