[tool.poetry]
name = "sport_data_scraper"
version = "0.1.0"
description = "Tool for finding statistics for sports like soccer, basketball, etc"
authors = ["junchen88 <jimmy181820@gmail.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests-html = "^0.10.0"
lxml-html-clean = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-scraper = "sport_data_scraper.sport_data_scraper:main"